fixed the location of alignment popover

--- a/src/components/toolbar/components/alignment/editor.scss
+++ b/src/components/toolbar/components/alignment/editor.scss
@@ -1,6 +1,6 @@
 .maxi-dropdown__alignment-content {
 	z-index: 99999999;
-	margin: -18px 0 0 91px !important;
+	margin: -33px 0 0 120px !important;
 
 	.components-popover__content {
 		width: 75px;
